# covered-call-prototype

./: .dockerignore  .gitignore  .sesskey  CARLOS_SESSION_LOG.md  CLAUDE.md  LICENSE  README.md  WHITEPAPER.md  carlos-reqs.txt  environment.yaml  main.py  microservices_grounding.md  mlflow.db  newer_version_reference_doc.docx  paper_fact_check.txt  pyproject.toml  requirements-dev.txt
app/: docker-compose.yml
data_scripts/: build_processed.py  data_dwnld.py
deploy/: reload.txt  setup_services.sh
experiment_notebooks/: 06_baseline_model.ipynb  06b_improved_models.ipynb  06c_improved_models.ipynb  08_model_comparison.ipynb  09_optimization_layer.ipynb  10_backtesting.ipynb
final_notebooks/: 02_data_clean.ipynb  06_XGBoost_baseline.ipynb  07b_patchtst_walkforward.ipynb  08_LSTM_CNN_Classification.ipynb  08b_LSTM_CNN_Classification_regularized.ipynb  08c_LSTM_CNN_Classification 3.ipynb  09_LSTM_CNN_Classification 3.ipynb  09_LSTM_CNN_v2_improved.ipynb  10_mlflow_tracking.ipynb
model_datasets/: X_test_scaled.parquet  X_train_scaled.parquet  X_val_scaled.parquet  y_test.parquet  y_train.parquet  y_val.parquet
model_datasets_two_stage/: X_test.parquet  X_test_scaled.parquet  X_val.parquet  X_val_scaled.parquet  y_test_d.parquet  y_test_m.parquet  y_train_d.parquet  y_train_m.parquet  y_val_d.parquet  y_val_m.parquet
models/: improved_model_metadata.json  lgbm_3class_moneyness.joblib  lgbm_tuned_6class.joblib  lstm_3class_daily.pt  lstm_3class_moneyness.pt  lstm_6class.pt  lstm_maturity.pt  lstm_moneyness.pt  lstm_walkforward_daily.pt  patchtst_full_model.pt  (+10 more)
(+259 files in other folders)
